<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddNewTrip">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageView
        android:id="@+id/imgNewTrip"
        android:layout_width="match_parent"
        android:layout_height="600px"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="5dp"
        android:textAlignment="viewStart"
        android:text="@string/title"
        app:layout_constraintTop_toBottomOf="@+id/imgNewTrip"
        />

    <EditText
        android:id="@+id/inptTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="5dp"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        android:background="@drawable/editext_rounded"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/txtDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="5dp"
        android:textAlignment="viewStart"
        android:text="@string/description"
        app:layout_constraintTop_toBottomOf="@+id/inptTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <EditText
        android:id="@+id/inptDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="5dp"
        app:layout_constraintTop_toBottomOf="@+id/txtDesc"
        android:background="@drawable/editext_rounded"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/txtFriends"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="5dp"
        android:textAlignment="viewStart"
        android:text="@string/friends"
        app:layout_constraintTop_toBottomOf="@+id/inptDesc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.example.kvtripplanner.MultiSelectionSpinner
        android:id="@+id/inptFriendsForTrip"
        android:layout_width="0dp"
        android:layout_height="90px"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/editext_rounded"

        app:layout_constraintTop_toBottomOf="@+id/txtFriends"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/txtBudget"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="5dp"
        android:textAlignment="viewStart"
        android:text="@string/single_person_cost_of_trip"
        app:layout_constraintTop_toBottomOf="@+id/inptFriendsForTrip"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <EditText
        android:id="@+id/inptBudget"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="5dp"
        app:layout_constraintTop_toBottomOf="@+id/txtBudget"
        android:background="@drawable/editext_rounded"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/txtLokacija"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="5dp"
            android:textAlignment="viewStart"
            android:text="@string/location"
            app:layout_constraintTop_toBottomOf="@+id/inptBudget"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <EditText
            android:id="@+id/inptLokacija"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="5dp"
            app:layout_constraintTop_toBottomOf="@+id/txtLokacija"
            android:background="@drawable/editext_rounded"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
            <TextView
                android:id="@+id/txtDatum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="5dp"
                android:textAlignment="viewStart"
                android:text="@string/date"
                app:layout_constraintTop_toBottomOf="@+id/inptLokacija"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <EditText
                android:id="@+id/inptDatum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="5dp"
                app:layout_constraintTop_toBottomOf="@+id/txtDatum"
                android:background="@drawable/editext_rounded"
                android:clickable="true"
                android:editable="false"
                android:focusable="false"
                android:longClickable="false"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnAddNewTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/add_trip"/>

</androidx.constraintlayout.widget.ConstraintLayout>